libexo Basque translation update
(Old svn revision: 30070)

--- a/po/eu.po
+++ b/po/eu.po
@@ -3,26 +3,26 @@
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
 #
-# Piarres Beobide <pi@beobide.net>, 2006, 2007.
+# Piarres Beobide <pi@beobide.net>, 2006, 2007, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.4\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-05 22:04+0200\n"
-"PO-Revision-Date: 2008-11-30 08:52+0200\n"
+"PO-Revision-Date: 2009-06-23 00:13+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: Euskara <Librezale@librezale.org>\n"
+"Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: eu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 1.2.0\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:150
 msgid "Follow state"
-msgstr "Jarraipen egoera"
+msgstr " Jarraipen egoera"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:139
 #: ../exo/exo-cell-renderer-icon.c:151
@@ -38,14 +38,12 @@ msgid "The icon to render."
 msgstr "Errenderizatzeko ikonoa."
 
 #: ../exo/exo-cell-renderer-icon.c:191
-#, fuzzy
 msgid "GIcon"
-msgstr "Ikonoa"
+msgstr "Gikonoa"
 
 #: ../exo/exo-cell-renderer-icon.c:192
-#, fuzzy
 msgid "The GIcon to render."
-msgstr "Errenderizatzeko ikonoa."
+msgstr "Errenderizatzeko Gikonoa."
 
 #: ../exo/exo-cell-renderer-icon.c:213
 msgid "size"
@@ -68,8 +66,7 @@ msgstr "Huts \"%s\" fitxategia irakurtzerakoan: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid ""
-"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
 msgstr ""
 "Huts \"%s\" irudia kargatzerakoan: Errore ezezaguna ziurrenik hondaturiko "
 "irudi fitxategia"
@@ -176,7 +173,7 @@ msgstr "Irrifartxoak"
 #. EXO_ICON_CHOOSER_CONTEXT_INTERNATIONAL
 #: ../exo/exo-icon-chooser-dialog.c:99
 msgid "International Denominations"
-msgstr "Izendapen Internazioanala"
+msgstr "Izendapen Internazionala"
 
 #. EXO_ICON_CHOOSER_CONTEXT_MIME_TYPES
 #: ../exo/exo-icon-chooser-dialog.c:101
@@ -282,8 +279,7 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:786
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
+msgid "How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:818
@@ -399,7 +395,7 @@ msgid ""
 "Drag an item onto the toolbars above to add it, from the toolbars in the "
 "items table to remove it."
 msgstr ""
-"Elementu bat tresna barra mugitu eta bertan gehitu, tresnabarra-tik kanpora "
+"Elementu bat tresna barra mugitu eta bertan gehitu, tresna-barratik kanpora "
 "mugitu berau ezabatzeko."
 
 #: ../exo/exo-toolbars-editor.c:543
@@ -424,19 +420,19 @@ msgstr "_Testua bakarrik"
 
 #: ../exo/exo-toolbars-view.c:793
 msgid "Text for _All Icons"
-msgstr "Testua Ikono Guztientz_at"
+msgstr "Testua Ikono guztientz_at"
 
 #: ../exo/exo-toolbars-view.c:802
 msgid "Text for I_mportant Icons"
-msgstr "Testua Ikono Ga_rrantzitsuentzat"
+msgstr "Testua Ikono ga_rrantzitsuentzat"
 
 #: ../exo/exo-toolbars-view.c:810
 msgid "_Remove Toolbar"
-msgstr "T_resnabarra Ezabatu"
+msgstr "Ezabatu t_resna-barra"
 
 #: ../exo/exo-toolbars-view.c:825
 msgid "Customize Toolbar..."
-msgstr "Tresnabarra Pertsonalizatu..."
+msgstr "Pertsonalizatu tresna-barra..."
 
 #: ../exo/exo-url.c:280
 #, c-format
@@ -487,11 +483,11 @@ msgstr "Leiho talde nagusia"
 
 #: ../exo/exo-xsession-client.c:154
 msgid "Restart command"
-msgstr "Komandoa berrabiarazi"
+msgstr "Berrabiarazi komandoa"
 
 #: ../exo/exo-xsession-client.c:155
 msgid "Session restart command"
-msgstr "Saio komandoa berrabiarazi"
+msgstr "Saio berrabiarazte komandoa"
 
 #: ../exo-csource/main.c:285
 #, c-format
@@ -586,7 +582,7 @@ msgstr "Erroreen berri eman <%s>-ra.\n"
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:290
 msgid "Select an Application"
-msgstr "Aplikazio bat hautatu"
+msgstr "Hautatu aplikazio bat"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:299
 #: ../exo-helper/exo-helper-chooser.c:432
@@ -621,7 +617,7 @@ msgstr "Shell Script-ak"
 #: ../exo-desktop-item-edit/exo-die-desktop-model.c:326
 #, c-format
 msgid "Create Launcher <b>%s</b>"
-msgstr "<b>%s</b> Abiarazlea Sortu"
+msgstr "Sortu <b>%s</b> abiarazlea"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:318
@@ -681,7 +677,7 @@ msgstr ""
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:443
 msgid "Run in _terminal"
-msgstr "_Terminalean abiarazi"
+msgstr "Abiarazi _terminalean"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
@@ -690,24 +686,24 @@ msgstr "Aukera hau hautatu komandoa terminal batetan abiarazteko."
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:591
 msgid "Select an icon"
-msgstr "Ikono bat hautatu"
+msgstr "Hautatu ikono bat"
 
 #. --- constants ---
 #: ../exo-desktop-item-edit/main.c:50
 msgid "Create Launcher"
-msgstr "Abiarazlea sortu"
+msgstr "Sortu abiarazlea"
 
 #: ../exo-desktop-item-edit/main.c:50
 msgid "Create Link"
-msgstr "Lotura sortu"
+msgstr "Sortu lotura"
 
 #: ../exo-desktop-item-edit/main.c:51
 msgid "Edit Launcher"
-msgstr "Abiarazlea editatu"
+msgstr "Editatu abiarazlea"
 
 #: ../exo-desktop-item-edit/main.c:51
 msgid "Edit Link"
-msgstr "Lotura editatu"
+msgstr "Editatu lotura"
 
 #: ../exo-desktop-item-edit/main.c:72
 msgid "Create a new desktop file in the given directory"
@@ -794,51 +790,51 @@ msgstr "%s Gailua"
 
 #: ../exo-hal/exo-hal.c:455
 msgid "External Floppy Drive"
-msgstr "Kanpo Diskete Gailua"
+msgstr "Kanpo diskete gailua"
 
 #: ../exo-hal/exo-hal.c:457
 msgid "Floppy Drive"
-msgstr "Diskete Gailua"
+msgstr "Diskete gailua"
 
 #: ../exo-hal/exo-hal.c:461
 msgid "Compact Flash Drive"
-msgstr "Compact Flash Gailua"
+msgstr "Compact-flash gailua"
 
 #: ../exo-hal/exo-hal.c:465
 msgid "Memory Stick Drive"
-msgstr "Memory Stick Gailua"
+msgstr "Memory-stick gailua"
 
 #: ../exo-hal/exo-hal.c:469
 msgid "Smart Media Drive"
-msgstr "Smart Media Gailua"
+msgstr "Smart-Media gailua"
 
 #: ../exo-hal/exo-hal.c:473
 msgid "SD/MMC Drive"
-msgstr "SD/MMC Gailua"
+msgstr "SD/MMC gailua"
 
 #: ../exo-hal/exo-hal.c:477
 msgid "Zip Drive"
-msgstr "Zip Gailua"
+msgstr "Zip gailua"
 
 #: ../exo-hal/exo-hal.c:481
 msgid "Jaz Drive"
-msgstr "Jaz Gailua"
+msgstr "Jaz gailua"
 
 #: ../exo-hal/exo-hal.c:485
 msgid "Pen Drive"
-msgstr "Boligrafo Gailua"
+msgstr "Boligrafo gailua"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:494
 #, c-format
 msgid "%s Music Player"
-msgstr "%s Musika Erreproduktorea"
+msgstr "%s musika erreproduktorea"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:509
 #, c-format
 msgid "%s Digital Camera"
-msgstr "%s Kamara Digitala"
+msgstr "%s kamara digitala"
 
 #. last fallback to "Drive"
 #: ../exo-hal/exo-hal.c:532
@@ -848,32 +844,32 @@ msgstr "Gailua"
 #: ../exo-hal/exo-hal.c:759
 #, c-format
 msgid "Blank %s Disc"
-msgstr "%s Disko Hutsa"
+msgstr "%s disko hutsa"
 
 #: ../exo-hal/exo-hal.c:761
 #, c-format
 msgid "%s Disc"
-msgstr "%s Diskoa"
+msgstr "%s diskoa"
 
 #. special case for pure audio disc
 #: ../exo-hal/exo-hal.c:766
 msgid "Audio CD"
-msgstr "Audio CD-a"
+msgstr "Audio CDa"
 
 #: ../exo-hal/exo-hal.c:802
 #, c-format
 msgid "%s Removable Volume"
-msgstr "%s Bolumen Aldagarria"
+msgstr "%s bolumen aldagarria"
 
 #: ../exo-hal/exo-hal.c:804
 #, c-format
 msgid "%s Volume"
-msgstr "%s Bolumena"
+msgstr "%s bolumena"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:103
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr "Hobetsiriko Aplikazioak"
+msgstr "Hobetsiriko aplikazioak"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:104
 msgid "Select default applications for various services"
@@ -888,26 +884,26 @@ msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:146
 msgid "Web Browser"
-msgstr "Web Nabigatzailea"
+msgstr "Web nabigatzailea"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:154
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"Lehenetsiriko Web nabigatzailea estekak ireki\n"
+"Lehenetsiriko eeb nabigatzailea estekak ireki\n"
 "eta laguntza bistaratzeko erabiliko da."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
 msgid "Mail Reader"
-msgstr "Posta Bezeroa"
+msgstr "Posta bezeroa"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:186
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"Lehenetsiriko Posta Bezeroa eposta helbide batetan\n"
+"Lehenetsiriko posta bezeroa eposta helbide batetan\n"
 "klikatzerakoan mezu bat sortzeko erabiliko da."
 
 #.
@@ -919,14 +915,14 @@ msgstr "Lanabesak"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:219
 msgid "Terminal Emulator"
-msgstr "Terminal Emuladorea"
+msgstr "Terminal emuladorea"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:227
 msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"Lehenetsiriko Terminal Emuladorea CLI ingurune\n"
+"Lehenetsiriko terminal emuladorea CLI ingurune\n"
 "bat behar duten komandoak abiarazteko erabiliko da."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:266
@@ -940,7 +936,7 @@ msgstr "Saguaren eskubiko botoia sakatu aplikazioa aldatzeko."
 
 #: ../exo-helper/exo-helper-chooser.c:190
 msgid "Application Chooser Button"
-msgstr "Aplikazio Hautatze Botoia"
+msgstr "Aplikazio hautatze botoia"
 
 #: ../exo-helper/exo-helper-chooser.c:334
 msgid "No application selected"
@@ -961,11 +957,11 @@ msgstr "Huts lehenetsiriko terminal emuladorea ezartzerakoan"
 #. allocate the chooser
 #: ../exo-helper/exo-helper-chooser.c:422
 msgid "Select application"
-msgstr "Aplikazioa hautatu"
+msgstr "Hautatu aplikazioa"
 
 #: ../exo-helper/exo-helper-chooser.c:535
 msgid "Choose a custom Web Browser"
-msgstr "Pertsonalizatutako Web Nabigatzaile bat aukeratu"
+msgstr "Pertsonalizatutako web nabigatzaile bat aukeratu"
 
 #: ../exo-helper/exo-helper-chooser.c:536
 msgid "Choose a custom Mail Reader"
@@ -1013,7 +1009,7 @@ msgstr "Beheko zerrendan ez dagoen aplikazio pertsonalizatu bat aukeratu."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:141
 msgid "Choose Preferred Application"
-msgstr "Hobetsiriko Aplikazioa Hautatu"
+msgstr "Hobetsiriko aplikazioa hautatu"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:284
 msgid ""
@@ -1052,8 +1048,8 @@ msgstr "Huts helpers.rc idazteko idazterakoan"
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
-"Hobetsiriko Aplikazioa (Web Nabigatzailea, ePosta Bezero eta Terminal "
-"Emuladorea)"
+"Hobetsiriko aplikazioa (web nabigatzailea, eposta bezero eta terminal "
+"emuladorea)"
 
 #: ../exo-helper/main.c:42
 msgid "Failed to execute default Web Browser"
@@ -1071,7 +1067,9 @@ msgstr "Huts lehenetsiriko terminal emuladorea exekutatzean"
 msgid ""
 "Open the Preferred Applications\n"
 "configuration dialog"
-msgstr "Ireki Xfce 4 hobetsiriko aplikazio\\bkonfigurazio leihoa"
+msgstr ""
+"Ireki Xfce 4 hobetsiriko aplikazio\n"
+"konfigurazio leihoa"
 
 #: ../exo-helper/main.c:69
 msgid "Settings manager socket"
@@ -1161,11 +1159,11 @@ msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.in.h:1
 msgid "Debian Sensible Browser"
-msgstr "Debian Lehenetsiriko Nabigatzailea"
+msgstr "Debian lehenetsiriko nabigatzailea"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr "Debian X Terminal Emuladorea"
+msgstr "Debian X terminal emuladorea"
 
 #: ../exo-helper/helpers/encompass.desktop.in.in.h:1
 msgid "Encompass"
@@ -1173,11 +1171,11 @@ msgstr "Encompass"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
-msgstr "Epiphany Web Nabigatzailea"
+msgstr "Epiphany web nabigatzailea"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr "Enlightened Terminal Emuladorea"
+msgstr "Enlightened terminal emuladorea"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
 msgid "Novell Evolution"
@@ -1189,11 +1187,11 @@ msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.in.h:1
 msgid "Galeon Web Browser"
-msgstr "Galeon Web Nabigatzailea"
+msgstr "Galeon web nabigatzailea"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.in.h:1
 msgid "GNOME Terminal"
-msgstr "GNOME Terminala"
+msgstr "GNOME terminala"
 
 #: ../exo-helper/helpers/kmail.desktop.in.in.h:1
 msgid "KMail"
@@ -1201,15 +1199,15 @@ msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.in.h:1
 msgid "Konqueror Web Browser"
-msgstr "Konqueror Web Nabigatzailea"
+msgstr "Konqueror web nabigatzailea"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
-msgstr "Links Testu Nabigatzailea"
+msgstr "Links testu nabigatzailea"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
-msgstr "Lynx Testu Nabigatzailea"
+msgstr "Lynx testu nabigatzailea"
 
 #: ../exo-helper/helpers/midori.desktop.in.in.h:1
 msgid "Midori"
@@ -1217,11 +1215,11 @@ msgstr "Midori"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
-msgstr "Mozilla Nabigatzailea"
+msgstr "Mozilla nabigatzailea"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.in.h:1
 msgid "Mozilla Mail"
-msgstr "Mozilla Posta"
+msgstr "Mozilla posta"
 
 #: ../exo-helper/helpers/mutt.desktop.in.in.h:1
 msgid "Mutt"
@@ -1237,15 +1235,15 @@ msgstr "NXterm"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
-msgstr "Opera Nabigatzailea"
+msgstr "Opera nabigatzailea"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.in.h:1
 msgid "Opera Mail"
-msgstr "Opera Posta"
+msgstr "Opera posta"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
 msgid "Claws Mail"
-msgstr "Claws Posta"
+msgstr "Claws posta"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
@@ -1261,11 +1259,11 @@ msgstr "RXVT Unicode"
 
 #: ../exo-helper/helpers/w3m.desktop.in.in.h:1
 msgid "W3M Text Browser"
-msgstr "W3M Testu Nabigatzailea"
+msgstr "W3M testu nabigatzailea"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
-msgstr "X Terminala"
+msgstr "X terminala"
 
 #: ../exo-mount/exo-mount-fstab.c:92
 #, c-format
@@ -1472,14 +1470,11 @@ msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:62
 msgid "  -?, --help                          Print this help message and exit"
-msgstr ""
-"  -?, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr "  -?, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:63
-msgid ""
-"  -V, --version                       Print version information and exit"
-msgstr ""
-"  -V, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid "  -V, --version                       Print version information and exit"
+msgstr "  -V, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:65
 msgid ""
@@ -1546,20 +1541,3 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
 
-#~ msgid "  -v, --version     Print version information and exit\n"
-#~ msgstr "  -v, --version     Bertsio xehetasunak bistarazi eta irten\n"
-
-#~ msgid "Failed to launch exo-preferred-applications"
-#~ msgstr "Huts exo-hobetsitako-aplikazioak abiarazterakoan"
-
-#~ msgid "Button Label|Preferred Applications"
-#~ msgstr "Hobetsiriko Aplikazioak"
-
-#~ msgid "Xfce 4 Preferred Applications"
-#~ msgstr "Xfce 4 Hobetsiriko Aplikazioak"
-
-#~ msgid ""
-#~ "  -v, --version                       Print version information and exit"
-#~ msgstr ""
-#~ "  -v, --version                       Bertsio xehetasunak bistarazi eta "
-#~ "irten"
