--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-22 Piarres Beobide <pi@beobide.net>
+
+	* eu.po: Basque translation update
+
 2009-06-15  Mike Massonnet <mmassonnet@xfce.org>
 
 	* sl.po: Slovenian translation update (Alan Pepelko)
