--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-02 Per Kongstad <pko@xfce.org>
+
+	* da.po: Danish translation update (Per Kongstad)
+
 2009-06-22 Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Basque translation update
