--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-07  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated.
+	
 2009-07-04  Masato Hashimoto <cabezon.hashimoto@gmail.com>
 
 	* ja.po: Japanese translation update (Masato Hashimoto)
