--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,11 @@
-2009-07-07  Gabor Kelemen  <kelemeng@gnome.hu>
+2009-07-09  Mike Massonnet <mmassonnet@xfce.org>
+
+	* ast.po: Asturian translation added (Marcos).
+
+2009-07-07  Gabor Kelemen <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
-	
+
 2009-07-04  Masato Hashimoto <cabezon.hashimoto@gmail.com>
 
 	* ja.po: Japanese translation update (Masato Hashimoto)
