Backport fix from trunk.
(Old svn revision: 30360)

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@
 - Allow all arguments in the terminal parameters (part of bug #5301).
 - Fix some issues in exo-open with spaces in arguments.
 - Properly handle NULL pixbufs in the toolbars code.
+- Make sure the ui-manager is up2date when creating the exo toolbar.
 
 0.3.101
 =======
