Fix possible segfault in exo_icon_view_get_item_at_pos (bug #5633).
(Old svn revision: 30429)

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@
 - Fix some issues in exo-open with spaces in arguments.
 - Properly handle NULL pixbufs in the toolbars code.
 - Make sure the ui-manager is up2date when creating the exo toolbar.
+- Fix possible segfault in exo_icon_view_get_item_at_pos (bug #5633).
 
 0.3.101
 =======
