--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-08-08  Mike Massonnet <mmassonnet@xfce.org>
+
+	* id.po: Indonesian translation update (Andhika Padmawan).
+
 2009-07-09  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ast.po: Asturian translation added (Marcos).
