--- a/po/id.po
+++ b/po/id.po
@@ -1,16 +1,16 @@
 # Indonesian translation of the libexo package.
 # Copyright (C) 2004-2007 os-cillation e.K.
 # This file is distributed under the same license as the libexo package.
-# Andhika Padmawan <andhika.padmawan@gmail.com>, 2008.
+# Andhika Padmawan <andhika.padmawan@gmail.com>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-05 22:04+0200\n"
-"PO-Revision-Date: 2008-12-21 21:50+0700\n"
+"PO-Revision-Date: 2009-06-02 21:49+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
-"Language-Team: Indonesian <id@li.org>\n"
+"Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -34,14 +34,12 @@ msgid "The icon to render."
 msgstr "Ikon untuk render."
 
 #: ../exo/exo-cell-renderer-icon.c:191
-#, fuzzy
 msgid "GIcon"
-msgstr "Ikon"
+msgstr "GIcon"
 
 #: ../exo/exo-cell-renderer-icon.c:192
-#, fuzzy
 msgid "The GIcon to render."
-msgstr "Ikon untuk render."
+msgstr "GIcon untuk render."
 
 #: ../exo/exo-cell-renderer-icon.c:213
 msgid "size"
