l10n: Updates to German (de) translation
Transmitted-via: Transifex (translations.xfce.org)

--- a/po/de.po
+++ b/po/de.po
@@ -39,11 +39,11 @@ msgstr "Das zu verwendende Symbol."
 
 #: ../exo/exo-cell-renderer-icon.c:191
 msgid "GIcon"
-msgstr "Symbol"
+msgstr "Symbol (GIcon)"
 
 #: ../exo/exo-cell-renderer-icon.c:192
 msgid "The GIcon to render."
-msgstr "Das zu verwendende Symbol."
+msgstr "Das zu verwendende Symbol (GIcon)."
 
 #: ../exo/exo-cell-renderer-icon.c:213
 msgid "size"
