--- a/README
+++ b/README
@@ -26,7 +26,7 @@ libexo currently supports three different levels of debugging support, which
 can be setup using the configure flag `--enable-debug' (check the output of
 `configure --help'):
 
-  `yes'		This is the default for SVN snapshot builds. It adds all kinds
+  `yes'		This is the default for GIT snapshot builds. It adds all kinds
   		of checks to the code, and is therefore likely to run slower.
 		Use this for development of libexo and locating bugs in libexo.
 
