Updates for 0.3.104 release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.3.104
+=======
+- Make unmount work for devices that have a parent that is a volume (bug #2968).
+
 0.3.103
 =======
 - Use the update-preview signal for updating the preview (bug #5133)
