Read mount options from a rc file (bug #2891).
All the hardcoded mount options are now read from a rc file so
they can be easily changed by the distro or user.

--- a/exo-mount/README
+++ b/exo-mount/README
@@ -9,3 +9,5 @@ highly recommended. See the output of
 
 for available command line options.
 
+For the mount options used by HAL, see the mount.rc file installed by exo in the
+$prefix/etc/xdg/xfce4 directory.
