--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+0.5.1
+=====
+- Remove exo-mount-point API.
+- Only add sync mount option to devices with no volume.
+- Add missing function in the symbols file.
+- Use the GIO code for reading mount points in exo-mount.
+- Make GIO-Unix an optional dependency.
+- Use .desktop filename when creating a new desktop item with
+  exo-desktop-item-edit.
+
 0.5.0
 =====
 The API version of exo has been changed from 0.3 to 1, to make it easier
